docs/핵심코드/version1.1/06-모델-동일조건-비교.md
# 핵심코드 ⑥ — 모델: 비교가 성립하는 조건

> 줄 단위 해설입니다. **코드 담당: 오준영 님** (PR #34·#41·#48·#61·#64·#71).
> 문서화 담당(이동원)이 코드를 *참고해* 쓴 해설이고, 코드는 건드리지 않습니다.
> 정본: [`models/`](../../../models/__init__.py) 4종 +
> [`notebooks/04-모델/KOSPI200/실험/`](../../../notebooks/04-모델/KOSPI200/실험/) 조합별 노트북

`models/` 는 **모델 팩토리**만 둡니다 — `build_logistic_baseline()` ·
`build_random_forest_baseline()` · `build_xgboost_baseline()` ·
`build_lightgbm_baseline()`. 학습·분할·평가는 여기 없습니다. 왜 이렇게 얇게
만들었는지가 이 문서의 내용입니다.

---

## 1. 모델은 분할을 스스로 만들지 않는다

`models/__init__.py` 의 계약:

> 비교가 성립하려면 모델만 다르고 나머지는 전부 같아야 한다 —
> 같은 폴드 분할 · 같은 피처 집합 · 같은 레이블 정의 · 같은 거래비용 가정.
> 그래서 각 모델은 **분할을 스스로 만들지 않는다.** 밖에서 받은 인덱스를 쓴다.

분할은 `evaluation.walk_forward` 가 만들고, 네 모델이 **같은 분할을 공유**합니다.
모델마다 `train_test_split` 을 따로 부르면 비교표는 아무 말도 하지 않게 됩니다.

```python
def build_lightgbm_baseline(*, random_state=42, ...) -> LGBMClassifier:
    """이 함수는 데이터를 직접 분할하지 않습니다.
    워크포워드에서 전달받은 학습 데이터만 fit()에 넣어야 합니다."""
```

## 2. 전처리가 모델에 붙어 다닌다 — Pipeline

```python
def build_logistic_baseline(...) -> Pipeline:
    return Pipeline([
        ("scaler", StandardScaler()),        # ① 스케일러가 모델과 한 몸
        ("model", LogisticRegression(...)),
    ])
```

- **①** `StandardScaler` 를 바깥에서 따로 `fit` 하면 **검증 구간의 평균·분산이
  학습에 흘러듭니다**(수업 자료의 "열 전체 정규화" 함정). Pipeline 으로 묶으면
  폴드마다 학습 구간에서만 `fit` 되는 것이 구조적으로 보장됩니다.
- 트리 모델(RF·XGBoost·LightGBM)에는 스케일러가 **없습니다** — 분기 기준은 값의
  순서만 보므로 스케일링이 무의미합니다. "일관성을 위해 다 붙이자"가 아니라
  모델 성질대로 갈랐습니다.

## 3. 재현성 — 난수와 코어

- 모든 팩토리에 `random_state=42` 기본값 — 같은 데이터로 다시 학습하면 같은
  결과가 나와야 실험 비교가 성립합니다.
- `n_jobs=-1`(전 코어) — **로컬 22코어가 Colab 런타임보다 빠른** CPU 바운드
  작업이라 로컬에서 돕니다. LightGBM 배포판은 GPU 빌드가 아니므로 "Colab 이니까
  빠르겠지"는 성립하지 않습니다 (모듈 머리의 실행처 표 참조).

## 4. 홀드아웃 준수 — PR #71 이 넣은 안전장치

모델 학습 전에 개발구간만 남기는 게이트가 `supply/model_data.py` 로 들어옵니다
(PR #71 · 2026-09-02 현재 리뷰 중).

```python
def holdout_safe_frame(frame, *, holdout_start=HOLDOUT_START,
                       label_horizon=5, date_column="bas_dd") -> pd.DataFrame:
    """홀드아웃 이전 행에서, 경계 직전 레이블 지평까지 제거한다."""
```

주목할 것은 `label_horizon=5` 입니다 — 개발구간 **마지막 5거래일도 추가로**
제거합니다. 그 행들의 5일 뒤 라벨이 봉인 구간을 보기 때문입니다. 경계에서 딱
자르는 것만으로는 부족하다는 것을 코드가 기억합니다.

## 5. 실험이 말해 준 것 — 조합이 아니라 평가축

조합 A~F × 모델 4종(로지스틱·RF·XGBoost·LightGBM) 실험의 결론:

- 어떤 조합도 기준선을 안정적으로 넘지 못했고, **하락 클래스를 거의 맞히지
  못했습니다.**
- 그런데 우리 포지션은 {0, +1}(사거나 안 사거나)이라 **하락 예측은 실행상 중립과
  같습니다** — 문제는 피처가 아니라 평가축이었습니다 (이슈 #33·#37,
  [X조합 검토 v1.0](../../모델파트/version1.0/X조합-피처선정-검토.md)).
- 이 결론이 홀드아웃 2년 단축(#63 → PR #71)과 평가 지표 재설계로 이어졌습니다.
