docs/핵심코드/version1.4/06-모델-동일조건-비교.md
# 핵심코드 ⑥ — 모델: 비교가 성립하는 조건

> 줄 단위 해설입니다. **코드 담당: 오준영 님** (PR #34·#41·#48·#61·#64·#71).
> 문서화 담당(이동원)이 코드를 *참고해* 쓴 해설이고, 코드는 건드리지 않습니다.
> 정본: [`models/`](../../../models/__init__.py) 4종 +
> [`notebooks/04-모델/KOSPI200/실험/`](../../../notebooks/04-모델/KOSPI200/실험/) 조합별 노트북 ·
> 🆕 v1.2 (2026-09-07): §6 개별종목 조합 A~F · 공통 OOS 일정 (PR #161)

`models/` 는 **모델 팩토리**만 둡니다 — `build_logistic_baseline()` ·
`build_random_forest_baseline()` · `build_xgboost_baseline()` ·
`build_lightgbm_baseline()`. 학습·분할·평가는 여기 없습니다. 왜 이렇게 얇게
만들었는지가 이 문서의 내용입니다.

---

## 1. 모델은 분할을 스스로 만들지 않는다

`models/__init__.py` 의 계약:

> 비교가 성립하려면 모델만 다르고 나머지는 전부 같아야 한다 —
> 같은 폴드 분할 · 같은 피처 집합 · 같은 레이블 정의 · 같은 거래비용 가정.
> 그래서 각 모델은 **분할을 스스로 만들지 않는다.** 밖에서 받은 인덱스를 쓴다.

분할은 `evaluation.walk_forward` 가 만들고, 네 모델이 **같은 분할을 공유**합니다.
모델마다 `train_test_split` 을 따로 부르면 비교표는 아무 말도 하지 않게 됩니다.

```python
def build_lightgbm_baseline(*, random_state=42, ...) -> LGBMClassifier:
    """이 함수는 데이터를 직접 분할하지 않습니다.
    워크포워드에서 전달받은 학습 데이터만 fit()에 넣어야 합니다."""
```

## 2. 전처리가 모델에 붙어 다닌다 — Pipeline

```python
def build_logistic_baseline(...) -> Pipeline:
    return Pipeline([
        ("scaler", StandardScaler()),        # ① 스케일러가 모델과 한 몸
        ("model", LogisticRegression(...)),
    ])
```

- **①** `StandardScaler` 를 바깥에서 따로 `fit` 하면 **검증 구간의 평균·분산이
  학습에 흘러듭니다**(수업 자료의 "열 전체 정규화" 함정). Pipeline 으로 묶으면
  폴드마다 학습 구간에서만 `fit` 되는 것이 구조적으로 보장됩니다.
- 트리 모델(RF·XGBoost·LightGBM)에는 스케일러가 **없습니다** — 분기 기준은 값의
  순서만 보므로 스케일링이 무의미합니다. "일관성을 위해 다 붙이자"가 아니라
  모델 성질대로 갈랐습니다.

## 3. 재현성 — 난수와 코어

- 모든 팩토리에 `random_state=42` 기본값 — 같은 데이터로 다시 학습하면 같은
  결과가 나와야 실험 비교가 성립합니다.
- `n_jobs=-1`(전 코어) — **로컬 22코어가 Colab 런타임보다 빠른** CPU 바운드
  작업이라 로컬에서 돕니다. LightGBM 배포판은 GPU 빌드가 아니므로 "Colab 이니까
  빠르겠지"는 성립하지 않습니다 (모듈 머리의 실행처 표 참조).

## 4. 홀드아웃 준수 — PR #71 이 넣은 안전장치

모델 학습 전에 개발구간만 남기는 게이트가 `supply/model_data.py` 로 들어옵니다
(PR #71 · 2026-09-02 현재 리뷰 중).

```python
def holdout_safe_frame(frame, *, holdout_start=HOLDOUT_START,
                       label_horizon=5, date_column="bas_dd") -> pd.DataFrame:
    """홀드아웃 이전 행에서, 경계 직전 레이블 지평까지 제거한다."""
```

주목할 것은 `label_horizon=5` 입니다 — 개발구간 **마지막 5거래일도 추가로**
제거합니다. 그 행들의 5일 뒤 라벨이 봉인 구간을 보기 때문입니다. 경계에서 딱
자르는 것만으로는 부족하다는 것을 코드가 기억합니다.

## 5. 실험이 말해 준 것 — 조합이 아니라 평가축

조합 A~F × 모델 4종(로지스틱·RF·XGBoost·LightGBM) 실험의 결론:

- 어떤 조합도 기준선을 안정적으로 넘지 못했고, **하락 클래스를 거의 맞히지
  못했습니다.**
- 그런데 우리 포지션은 {0, +1}(사거나 안 사거나)이라 **하락 예측은 실행상 중립과
  같습니다** — 문제는 피처가 아니라 평가축이었습니다 (이슈 #33·#37,
  [X조합 검토 v1.0](../../모델파트/version1.0/X조합-피처선정-검토.md)).
- 이 결론이 홀드아웃 2년 단축(#63 → PR #71)과 평가 지표 재설계로 이어졌습니다.

---

## 6. 🆕 개별종목 조합 A~F 와 공통 OOS 일정 (v1.2 · 2026-09-07)

**코드 담당: 오준영 님** (PR #161 · 랭킹 #160 옆). 정본:
[`models/stock_experiment.py`](../../../models/stock_experiment.py) ·
[`models/stock_ranking.py`](../../../models/stock_ranking.py) ·
[`scripts/run_stock_index_ranking.py`](../../../scripts/run_stock_index_ranking.py) ·
결과 [`reports/stock_feature_combinations.json`](../../../reports/stock_feature_combinations.json)

KOSPI200 한 종목이던 모델이 **개별종목 패널**(업종 10 × 시가총액 상위 5 · 176,705행 · 166종목)로
넓어졌습니다. §1 의 원칙 — *모델은 분할을 스스로 만들지 않는다* — 는 그대로인데, 이제 모델이 **둘**
(지수 조합 E · 종목 조합 F)이라 **두 모델이 같은 날짜를 검증하게** 만드는 일이 먼저입니다.

### 6.1 공통 일정 — 두 모델이 모두 가진 거래일에서 한 번만 자른다

```python
def build_common_validation_schedule(first_dates, second_dates, *, n_folds=12,
                                     minimum_train_dates=750, valid_dates=60, gap_dates=5):
    """두 모델이 모두 가진 거래일에서 동일한 expanding OOS 일정을 만든다."""
    left = pd.Index(pd.Series(first_dates, dtype="string").drop_duplicates())
    right = pd.Index(pd.Series(second_dates, dtype="string").drop_duplicates())
    …
    common = left.intersection(right, sort=False)
    splits = expanding_splits(len(common), n_folds=n_folds, min_train=minimum_train_dates,
                              horizon=valid_dates, gap=gap_dates, label_horizon=gap_dates)
```

⑦ 의 `expanding_splits` 를 **날짜 교집합** 위에서 한 번 부르고, 그 결과(`fold`, `bas_dd`)를 두 모델이
나눠 씁니다. 지수 쪽은 `aligned_index_splits` 가 그 날짜를 자기 인덱스 위치로 옮기는데, 세 가지를
검사합니다:

```python
    for _fold, group in schedule.groupby("fold", sort=True):
        valid = positions.loc[valid_dates].to_numpy(dtype=int)
        if len(valid) == 0 or (len(valid) > 1 and not np.all(np.diff(valid) == 1)):
            raise ValueError("한 폴드의 검증 날짜가 KOSPI200 거래일에서 연속하지 않습니다.")
        train_end = int(valid[0]) - gap_dates
        if train_end < minimum_train_dates:
            raise ValueError("날짜 정렬 분할의 최초 학습 거래일이 부족합니다.")
        splits.append((np.arange(train_end, dtype=int), valid))
```

검증 날짜가 지수 거래일에서 **연속**이어야 하고(중간에 빠진 날이 있으면 두 모델의 창이 다르다), 학습
끝은 검증 첫날에서 `gap` 만큼 앞이며, 첫 폴드 학습이 750거래일에 못 미치면 **세웁니다.** 그래서 공통
첫 검증일이 `2014-02-17` 이 됩니다 — 조합 E 의 `hv_regime` 준비구간 269거래일(⑤ §6)이 지수 쪽 첫
사용 가능일을 `2011-01-27` 로 밀기 때문입니다. 데이터 파트가 실측하니 **지수만** 2008년부터 붙이면
`2013-02-12`(249거래일 앞당김)가 됩니다(이슈 #159 ·
[노트북 06/12](../../../notebooks/06-검토·발견/12.앞당기려면-종목이-아니라-지수가-필요하다.ipynb)).

### 6.2 랭킹 — 지수 방향과 같은 쪽의 종목 확률만 본다

```python
def select_for_index_direction(stock_predictions, index_predictions, *, top_n=5):
    """KOSPI200 예측 클래스와 같은 종목 확률을 골라 상위 N개를 남긴다."""

def summarize_random_ranking_baseline(stock_predictions, index_predictions, *,
                                      cutoffs=(1, 3, 5)):
    """공통 OOS의 날짜·지수 예측 방향 안에서 무작위 Top-K의 기대 적중률을 계산한다."""
```

무작위 기준선을 **전체 기간의 고정 비율(30.50%)로 두지 않고** 공통 OOS · 지수 예측 방향별 평가 후보에서
다시 계산하는 것이 [ADR 0006](../../decisions/0006-개별종목-중립대와-평가기준선.md) 의 결정입니다.
09-07 결과 — 조합 F + LightGBM · Top-1 적중 **0.4833** vs 무작위 0.3452 (+0.1381).

### 6.3 데이터 파트가 잰 표본 (모델 파트 값이 아니다)

조합마다 유효행이 다릅니다(A 172,924 · C 174,900 · E 172,880 · F 174,918 · 6개 공통 172,379) —
비교는 공통 행에서. 정지일은 전 시장 2.94% 인데 학습표본에서 **0.016%** 이고, 조합 C 는 곱셈 항등식이
있어 VIF 2,685(`ret_1` 을 빼면 5.79)입니다. 전부 [데이터파트 v3.9 §2.11](../../데이터파트/version3.9/명세서.md)
에 있습니다. 🔴 오준영 님 스크립트는 HF 를 `data/raw/hf_snapshot` 에 내려받은 것을 읽습니다 — 반출본과
사본이 다르면 재현이 어긋나므로, 노트북 06/12 는 반출본 자리로 바꿔 돌렸습니다.
